tests/basic/check/eq/120.pan.out
tests/basic/check/eq/120.pan:5:1-5: error: cannot solve constraints of f120
tests/basic/check/eq/120.pan:10:1-5: error: cannot solve constraints of f121